Fix spacing between logo and title
For some reason, this broke.

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #logo {
-  margin-right: 5px;
+  margin-right: 10px;
   margin-bottom: 5px;
 }
 
